<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProductActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimarioDark"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/tvDetailProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:gravity="center_horizontal"
                        android:text="@string/nombreProducto"
                        android:textColor="@color/colorAcent"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/carvieimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDetailProductName">

                        <ImageView
                            android:id="@+id/ivDetailImage"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="20dp"
                            android:src="@mipmap/ic_launcher"
                            tools:srcCompat="@tools:sample/avatars" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvdescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:gravity="start"
                        android:text="Description:"
                        android:textAllCaps="true"
                        android:textColor="@color/colorHint"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/carvieimage" />

                    <TextView
                        android:id="@+id/tvDetailProductDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:gravity="center_horizontal"
                        android:text="@string/description_product"
                        android:textColor="@color/colorAcentDark"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvdescription" />

                    <TextView
                        android:id="@+id/tvprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:gravity="start"
                        android:text="@string/price"
                        android:textAllCaps="true"
                        android:textColor="@color/colorHint"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDetailProductDescription" />

                    <TextView
                        android:id="@+id/tvDetailProductPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:gravity="end"
                        android:text="@string/Price"
                        android:textColor="@color/colorAcent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/tvprice"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDetailProductDescription" />


                    <TextView
                        android:id="@+id/tvscore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:gravity="start"
                        android:text="@string/totalscore"
                        android:textAllCaps="true"
                        android:textColor="@color/colorHint"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvprice" />

                    <TextView
                        android:id="@+id/tvDetailProductScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:gravity="end"
                        android:text="@string/score"
                        android:textColor="@color/colorAcent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/tvscore"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDetailProductPrice" />

                    <TextView
                        android:id="@+id/tvdelivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:gravity="start"
                        android:text="@string/deliverytime"
                        android:textAllCaps="true"
                        android:textColor="@color/colorHint"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvscore" />

                    <TextView
                        android:id="@+id/tvDetailproductDeliveryTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:gravity="end"
                        android:text="15"
                        android:textColor="@color/colorAcent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/tvdelivery"
                        app:layout_constraintTop_toBottomOf="@id/tvDetailProductScore" />

                    <TextView
                        android:id="@+id/tvcategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="start"
                        android:text="@string/category"
                        android:textAllCaps="true"
                        android:textColor="@color/colorHint"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvdelivery" />

                    <TextView
                        android:id="@+id/tvDetailproductCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:gravity="end"
                        android:text="15"
                        android:textColor="@color/colorAcent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/tvcategory"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDetailproductDeliveryTime" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </ScrollView>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>